--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 before_install:
-- docker build -t foresight-flask-app .
+- docker build -t foresight-flask-app python-service/
 - docker run -d --name app foresight-flask-app
 - docker ps -a
 
