--- a/python-service/Dockerfile
+++ b/python-service/Dockerfile
@@ -5,5 +5,4 @@ RUN apt-get install -y python3-pip python-dev build-essential
 COPY . /app
 WORKDIR /app
 RUN pip3 install -r requirements.txt
-ENTRYPOINT ["python3"]
-CMD ["app.py"]
+ENTRYPOINT ["python3", "app.py"]
