--- a/LynxApp/Podfile
+++ b/LynxApp/Podfile
@@ -11,5 +11,7 @@ target 'LynxApp' do
   pod 'FacebookLogin'
   pod 'FacebookShare'
   pod 'Firebase/Core'
+  pod 'Fabric', '~> 1.7.6'
+  pod 'Crashlytics', '~> 3.10.1'
 
 end
